fix: bigger jumping gap

--- a/styles/style.css
+++ b/styles/style.css
@@ -141,7 +141,7 @@ video {
 
 .jumping-prediction-para {
   /* height: calc(10ch - clamp(0vw, 0, 3vw)); */
-  height: clamp(5ch, 12ch - 8vw, 12ch);
+  height: clamp(5ch, 14ch - 8vw, 13ch);
   /* overflow: hidden; */
 }
 .container {
